# MicroStrategyToPowerBI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.example.json  migrate.py  pyproject.toml  requirements.txt  ruff.toml  wizard.py
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  ENTERPRISE_GUIDE.md  KNOWN_LIMITATIONS.md  MAPPING_REFERENCE.md  MIGRATION_CHECKLIST.md  MIGRATION_PLAN.md  MSTR_TO_DAX_REFERENCE.md  TEST_STRATEGY.md  TROUBLESHOOTING.md
examples/: README.md  generate_examples.py
microstrategy_export/: __init__.py  attributes.json  change_detector.py  connection_mapper.py  cube_extractor.py  cubes.json  custom_groups.json  dossier_extractor.py  dossiers.json  expression_converter.py  extract_mstr_data.py  facts.json  hierarchies.json  incremental.py  metric_extractor.py  metrics.json  parallel.py  prompt_extractor.py  prompts.json  realtime_extractor.py  relationships.json  report_extractor.py  reports.json  rest_api_client.py  schema_extractor.py  scorecard_extractor.py  security_extractor.py  security_filters.json  subtotals.json  thresholds.json
powerbi_import/: __init__.py  ai_converter.py  alerts_generator.py  assessment.py  calc_column_utils.py  certification.py  comparison_report.py  dashboard.py  dataflow_generator.py  dax_optimizer.py  dax_recipes.py  drift_report.py  equivalence_tester.py  fabric_constants.py  fabric_naming.py  fabric_semantic_model_generator.py  global_assessment.py  goals_generator.py  governance_report.py  html_template.py  i18n.py  import_to_powerbi.py  lakehouse_generator.py  lineage.py  lineage_report.py  m_query_generator.py  marketplace.py  merge_assessment.py  merge_config.py  merge_report_html.py  migration_report.py  model_templates.py  monitoring.py  notebook_generator.py  pbip_generator.py  pipeline_generator.py  plugins.py  progress.py  purview_integration.py  reconciler.py  (+18 more)
scripts/: generate_tests.py  scheduled_migration.py
test_output/: migration_summary.json
test_output_nocal/: Sales Analytics.pbip  migration_summary.json
tests/: cassette_harness.py  conftest.py  synthetic_fixtures.py  test_advanced_extraction.py  test_bug_bash.py  test_connection_mapper.py  test_content_library.py  test_dax_optimizer.py  test_deploy_infra.py  test_deployment.py  test_dossier_extractor.py  test_expression_converter.py  test_extract_mstr_data.py  test_fabric_deep.py  (+29 more)
(+507 files in other folders)
